* Fix 'close' element inside .message-popup, only anchor are replaced by a small cross and moved top rigth * Add larger padding for .message-popup * Set scrollbar and maxheight on .message-popup .content
refs z2#74

--- a/themes/pbpoker/pbpoker.css
+++ b/themes/pbpoker/pbpoker.css
@@ -2308,7 +2308,7 @@ padding-left: 5px;
 	width: 600px;
 }
 
-.messages-popup .close {
+.messages-popup a.close {
 	text-indent: -10000px;
 	display: block;
 	width: 20px;
